--- a/static/main.css
+++ b/static/main.css
@@ -492,3 +492,29 @@ span.price {
     margin-bottom: 20px;
   }
 }
+
+.pagination {
+  display: inline-block;
+  position: fixed;     
+     text-align: center;    
+     bottom: 0px; 
+     width: 100%;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+.pagination a.active {
+  background-color: #4CAF50;
+  color: white;
+  border-radius: 5px;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+  border-radius: 5px;
+}
