--- a/templates/ecommerce/checkout.html
+++ b/templates/ecommerce/checkout.html
@@ -49,7 +49,7 @@
         </table>
 
         <br>
-        <a class="btn btn-warning pay" value="{{default_card.stripe_id}}" >Pay <i class="item-total-price">{% money_localize request.user.cart.amount|div:100 request.user.wallet.currency %}</i> with default card</a>
+        <a class="btn btn-warning pay" value="{{default_card.stripe_id}}" >Pay <i class="item-total-price">{{request.user.cart.amount|div:100}}</i> with default card</a>
         <br>
 
         {% endif %}
