--- a/templates/ecommerce/orders.html
+++ b/templates/ecommerce/orders.html
@@ -3,20 +3,18 @@
 
 
 {% block content %}
-<h1>Shop items</h1>
+<h1>Your orders</h1>
 <div class="row card-column">
   {% for object in object_list %}
   <div class="column">
     <div class="card">
-      <img src="{{object.image.url}}" alt="{{object.title}}" style="width:100%">
-      <h2>{{object.title}}</h2>
-      <p class="price">{{object.variable_price}}</p>
-      <p>{{object.description}}</p>
-      <p><a class="btn btn-primary" href="{{object.get_absolute_url}}" >&#x2607;</a></p>
+      <img src="{{object.item.image.url}}" alt="{{object.item.title}}" style="width:100%">
+      <h2>{{object.item.title}}</h2>
+      <p>{{object.item.description}}</p>
+      <p><a class="btn btn-primary" href="{% url 'ecommerce:order' id=object.id %}" >&#x2607;</a></p>
     </div>
   </div>
   {% endfor %}
-
   <div class="pagination">
     <span class="step-links">
         {% if page_obj.has_previous %}
@@ -36,4 +34,3 @@
   </div>
 </div>
 {% endblock %}
-
